# sphinx-prediction-lab

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  data-quality.yml  research-hypothesis.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
configs/corpus/: sphinx_chronicle_h009_v1.json  sphinx_chronicle_v1.json  sphinx_corpus_s0_fast_v1.json  sphinx_corpus_v1.json
configs/trace/: sphinx_trace_h010_development_tape_v1.json  sphinx_trace_h010_development_tape_v1_result.json  sphinx_trace_h010_profit_evaluation_v1.json  sphinx_trace_h011_actor_context_v3_result.json  sphinx_trace_h011_resolution_context_v1.json  sphinx_trace_h012_policy_encoding_cache_v1.json  sphinx_trace_research_mandate_v1.json  sphinx_trace_s0_h007_ablation.json  sphinx_trace_s0_h007_result.json  sphinx_trace_s0_h011_50m_market_only_result.json  sphinx_trace_s0_h011_50m_wallet_flow_result.json  sphinx_trace_s0_h011_calibration_v1.json  sphinx_trace_s0_h011_calibration_v2.json  sphinx_trace_s0_h011_campaign_v1.json  sphinx_trace_s0_h011_model_v1.json  sphinx_trace_s0_h011_pack_v1.json  (+49 more)
docs/: ARCHITECTURE.md  CORPUS.md  DATA_SOURCES.md  EVALUATION_PROTOCOL.md  POLYMARKET_EDGE_BOT_REVIEW.md  RESEARCH.md  ROADMAP.md
schemas/: chronicle_decision_v1.schema.json  chronicle_episode_v1.schema.json  chronicle_polygon_edge_v1.schema.json  chronicle_stream_manifest_v1.schema.json  chronicle_target.schema.json  market_snapshot.schema.json  model_signal.schema.json  simulator_fill_v1.schema.json  simulator_order_v1.schema.json  wallet_activity.schema.json
scripts/: __init__.py  analyze_h022_exact_replay.py  analyze_h023_exact_replay.py  audit_fast_ledger.py  audit_h009_sources.py  audit_h011_decision_horizon.py  benchmark_s0_training.py  build_corpus_manifest.py  build_h009_chronicle.py  build_h009_polygon.py  build_h010_development_tape.py  build_h011_actor_context.py  build_h011_feature_pack.py  build_h011_resolution_context.py  build_h012_policy_encodings.py  build_h014_replay_state_pack.py  build_h015_on_policy_pack.py  build_h016_fee_schedule.py  build_h017_protocol_tail_pack.py  build_h022_candidate_pack.py  build_h023_realized_candidate_pack.py  build_s0_trial_t0.py  calibrate_h011_outcome.py  check_contracts.py  evaluate_h010_profit.py  pack_s0_trial_t0.py  profile_fast_ledger.py  qualify_h011_feature_pack.py  run_corpus_backfill.ps1  run_h010_policy_replay.py  run_s0_h007_ablation.py  train_h011_outcome.py  train_h012_policy.py  train_h013_residual.py  train_h014_replay_state_policy.py  train_h015_portfolio_advantage.py  train_h017_protocol_tail_policy.py  train_h018_conservative_residual_policy.py  train_h019_loss_veto_policy.py  train_h021_price_aware_economic_veto_policy.py  (+4 more)
tests/: test_chronicle.py  test_chronicle_h009.py  test_configs.py  test_contracts.py  test_corpus.py  test_cryptohouse.py  test_development_tape.py  test_economic_veto_training.py  test_fee_schedule_h016.py  test_h009_builder.py  test_h010_catalog.py  test_h011_builder.py  test_h011_calibration.py  test_h011_features.py  test_h011_horizon_audit.py  test_h011_predictions.py  test_h011_qualification.py  test_h011_resolution.py  test_h011_sources.py  test_h011_training.py  test_h013_training.py  test_h014_training.py  test_h015_training.py  test_h016_builder.py  test_h022_analysis.py  test_h022_features.py  test_h022_runtime.py  test_h023_labels.py  test_h023_runtime.py  test_h023_training.py  test_model_h011.py  test_model_h012.py  test_model_h013.py  test_model_h021.py  test_model_h022.py  test_model_h023.py  test_on_policy_pack.py  test_policy_checkpoint.py  test_policy_decisions.py  test_policy_encodings.py  (+16 more)
(+68 files in other folders)
