[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "sphinx-prediction-lab"
version = "0.1.0"
description = "Causal wallet-flow intelligence for prediction markets."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sergii Rudniev" }]
keywords = [
  "prediction-markets",
  "temporal-graphs",
  "wallet-intelligence",
  "machine-learning",
  "polymarket",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
research = [
  "numpy>=2.1,<2.5",
  "polars>=1.19",
  "pyarrow>=18.1",
  "pydantic>=2.10",
  "torch>=2.4",
]
pulse = [
  "httpx>=0.28,<1",
  "PyYAML>=6,<7",
  "websockets>=15,<16",
  "zstandard>=0.23,<1",
]
corpus = [
  "httpx>=0.28,<1",
  "pycryptodome>=3.21,<4",
  "zstandard>=0.23,<1",
]
dev = [
  "mypy>=1.14",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
sphinx-trace = "sphinx_trace.__main__:main"
sphinx-pulse = "sphinx_pulse.collector:main"
sphinx-pulse-publish = "sphinx_pulse.publisher:main"
sphinx-corpus = "sphinx_corpus.cli:main"

[project.urls]
Homepage = "https://github.com/SergiiRudniev/sphinx-prediction-lab"
Repository = "https://github.com/SergiiRudniev/sphinx-prediction-lab"
Issues = "https://github.com/SergiiRudniev/sphinx-prediction-lab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_trace", "src/sphinx_pulse", "src/sphinx_corpus"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests", "scripts"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
